IDEA-389301 [java-completion] JavaReflectionCompletionContributor -> JavaReflectionCompletionItemProvider
(part of) Convert reflection completion to ModCommand API

GitOrigin-RevId: b3f9a197512ae7172a0498498cc0f3dd44ba5edb